--- a/vanilla/package.json
+++ b/vanilla/package.json
@@ -14,5 +14,8 @@
     "prettier": "^2.3.2",
     "prettier-eslint": "^13.0.0",
     "vite": "^2.4.4"
+  },
+  "dependencies": {
+    "dotenv": "^10.0.0"
   }
 }
