chore(vue): upgrade yarn

--- a/vue/package.json
+++ b/vue/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vue",
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "packageManager": "yarn@3.3.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
