chore(vue): upgrade depencies

--- a/vue/.vscode/settings.json
+++ b/vue/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "editor.defaultFormatter": "rvest.vs-code-prettier-eslint",
+  "editor.defaultFormatter": "dbaeumer.vscode-eslint",
   "editor.formatOnSave": true,
   "eslint.packageManager": "yarn",
   "eslint.validate": ["javascript", "vue"],
